# egui_wgpu_plot

./: Cargo.toml  README.md  shell.nix
examples/: lorenz.rs
src/: lib.rs  line_shader.wgsl
